test/analyze/type_check/break/break_outside_loop.exp
Error: Break cannot appear outside a loop
test/analyze/type_check/break/break_outside_loop.myte:4:2-8
 4 |   break;
   |   ^^^^^^