test/analyze/type_check/break/break_outside_loop.myte
module break_outside_loop

fun main() {
  break;
}